Minimize use of LinkedList. #7379